fix: fix scrollbar position

--- a/src/components/Publish/Navigation/index.module.css
+++ b/src/components/Publish/Navigation/index.module.css
@@ -1,10 +1,12 @@
 .navigation {
   margin: -1.3rem calc(var(--spacer) / -1.5) var(--spacer)
     calc(var(--spacer) / -1.5);
-  padding: calc(var(--spacer) / 2) 0;
   scrollbar-width: none;
   border-bottom: 1px solid var(--border-color);
   background-color: var(--background-highlight);
+  width: calc(100% + var(--spacer) 0 * 2);
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media (min-width: 40rem) {
@@ -27,10 +29,10 @@
   white-space: nowrap;
   text-align: center;
   width: 100%;
-  padding: 0;
+  padding: calc(var(--spacer) / 2) 0;
   margin: 0;
   counter-reset: list-number;
-  overflow-x: auto;
+  overflow-x: visible;
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
